--- a/main/index.html
+++ b/main/index.html
@@ -11,7 +11,7 @@
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
   <link rel="shortcut icon" type="image/x-icon" href="/main/img/fav.ico" />
-  <link rel="stylesheet" href="/main/css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
