--- a/main/about.html
+++ b/main/about.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
-  <link rel="shortcut icon" type="image/x-icon" href="/main/img/fav.ico" />
-  <link rel="stylesheet" href="/main/css/style.css" />
+  <link rel="shortcut icon" type="image/x-icon" href="img/fav.ico" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -19,7 +19,7 @@
   <section id="header-1">
     <div class="container">
       <div class="header-nav">
-        <img src="/main/img/logo-white.png" alt="logo" />
+        <img src="img/logo-white.png" alt="logo" />
         <ul>
           <li>
             <a href="index.html"> Home </a>
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="about-main">
-      <img src="/main/img/About.jpg" alt="logo">
+      <img src="img/About.jpg" alt="logo">
       <div class="about-bio">
         <h1>Lorem, ipsum.</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nam commodi asperiores autem reprehenderit
@@ -114,10 +114,10 @@
 
   <section id="logo">
     <div class="about-logo">
-      <img src="/main/img/about-logos/logo-envato.png">
-      <img src="/main/img/about-logos/logo-woocommerce.png">
-      <img src="/main/img/about-logos/logo-wordpress.png">
-      <img src="/main/img/about-logos/logo-magento.png">
+      <img src="img/about-logos/logo-envato.png">
+      <img src="img/about-logos/logo-woocommerce.png">
+      <img src="img/about-logos/logo-wordpress.png">
+      <img src="img/about-logos/logo-magento.png">
     </div>
   </section>
 
@@ -132,7 +132,7 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, corrupti? Temporibus earum qui nulla ab!
           Enim, harum. Placeat, esse ducimus.</p>
         <ul>
-          <li><img src="/main/img/testimonials/person1.jpg"></li>
+          <li><img src="img/testimonials/person1.jpg"></li>
           <li>John Doe</li>
         </ul>
       </div>
@@ -140,7 +140,7 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, corrupti? Temporibus earum qui nulla ab!
           Enim, harum. Placeat, esse ducimus.</p>
         <ul>
-          <li><img src="/main/img/testimonials/person2.jpg"></li>
+          <li><img src="img/testimonials/person2.jpg"></li>
           <li>Jane Doe</li>
         </ul>
       </div>
@@ -148,7 +148,7 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, corrupti? Temporibus earum qui nulla ab!
           Enim, harum. Placeat, esse ducimus.</p>
         <ul>
-          <li><img src="/main/img/testimonials/person3.jpg"></li>
+          <li><img src="img/testimonials/person3.jpg"></li>
           <li>John Doe</li>
         </ul>
       </div>
@@ -156,7 +156,7 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, corrupti? Temporibus earum qui nulla ab!
           Enim, harum. Placeat, esse ducimus.</p>
         <ul>
-          <li><img src="/main/img/testimonials/person4.jpg"></li>
+          <li><img src="img/testimonials/person4.jpg"></li>
           <li>Jane Doe</li>
         </ul>
       </div>
