--- a/main/index.html
+++ b/main/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
-  <link rel="shortcut icon" type="image/x-icon" href="/main/img/fav.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="img/fav.ico" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -19,7 +19,7 @@
   <section id="header">
     <div class="container">
       <div class="header-nav">
-        <img src="/main/img/logo-white.png" alt="logo" class="logo" />
+        <img src="img/logo-white.png" alt="logo" class="logo" />
         <ul>
           <li>
             <a href="index.html" class="current"> Home </a>
