--- a/main/work.html
+++ b/main/work.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
-  <link rel="shortcut icon" type="image/x-icon" href="/main/img/fav.ico" />
-  <link rel="stylesheet" href="/main/css/style.css" />
+  <link rel="shortcut icon" type="image/x-icon" href="img/fav.ico" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -19,7 +19,7 @@
   <section id="header-1">
     <div class="container">
       <div class="header-nav">
-        <img src="/main/img/logo-white.png" alt="logo" />
+        <img src="img/logo-white.png" alt="logo" />
         <ul>
           <li>
             <a href="index.html"> Home </a>
@@ -41,7 +41,7 @@
     </div>
     <div class="work-main">
       <div class="item">
-        <img src="/main/img/items/item1.png" alt="Site1">
+        <img src="img/items/item1.png" alt="Site1">
         <div class="overlay">
           <div class="item-text">
             <h3>Design</h3>
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="/main/img/items/item2.png" alt="Site2">
+        <img src="img/items/item2.png" alt="Site2">
         <div class="overlay">
           <div class="item-text">
             <h3>UI/UX</h3>
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="/main/img/items/item3.png" alt="Site3">
+        <img src="img/items/item3.png" alt="Site3">
         <div class="overlay">
           <div class="item-text">
             <h3>Photography and Design</h3>
@@ -68,7 +68,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="/main/img/items/item4.png" alt="Site4">
+        <img src="img/items/item4.png" alt="Site4">
         <div class="overlay">
           <div class="item-text">
             <h3>Design</h3>
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="/main/img/items/item5.png" alt="Site5">
+        <img src="img/items/item5.png" alt="Site5">
         <div class="overlay">
           <div class="item-text">
             <h3>Mobile UI Design</h3>
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="/main/img/items/item6.png" alt="Site6">
+        <img src="img/items/item6.png" alt="Site6">
         <div class="overlay">
           <div class="item-text">
             <h3>Design Concept</h3>
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="/main/img/items/item7.png" alt="Site7">
+        <img src="img/items/item7.png" alt="Site7">
         <div class="overlay">
           <div class="item-text">
             <h3>Photography</h3>
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="/main/img/items/item8.png" alt="Site8">
+        <img src="img/items/item8.png" alt="Site8">
         <div class="overlay">
           <div class="item-text">
             <h3>Web Apps</h3>
@@ -113,7 +113,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="/main/img/items/item9.png" alt="Site9">
+        <img src="img/items/item9.png" alt="Site9">
         <div class="overlay">
           <div class="item-text">
             <h3>Social Network Concept</h3>
