--- a/main/index.html
+++ b/main/index.html
@@ -32,7 +32,7 @@
       <div class="header-main">
         <h1>
           I am Pranit a
-          <span class="txt-type" data-wait="3000" data-words='["Student", "Coder?", "Web Dev?"]'></span>
+          <span class="txt-type" data-wait="3000" data-words='["Student"]'></span>
         </h1>
         <p>Learning and New to Web Development.</p>
       </div>
