Update 0.9 Working Links

--- a/main/about.html
+++ b/main/about.html
@@ -170,10 +170,10 @@
       <div class="main-footer">
         <p>Copyright 2021-22 &copy;</p>
         <ul>
-          <a href="#"> <i class="fab fa-twitter fa-2x"> </i> </a>
-          <a href="#"> <i class="fab fa-github fa-2x"> </i> </a>
-          <a href="#"> <i class="fab fa-instagram fa-2x"> </i> </a>
-          <a href="#"><i class="fab fa-facebook fa-2x"></i> </a>
+          <a href="https://twitter.com/Pranit1272"> <i class="fab fa-twitter fa-2x"> </i> </a>
+          <a href="https://github.com/PranitChavan"> <i class="fab fa-github fa-2x"> </i> </a>
+          <a href="https://www.instagram.com/ig_frozen_/"> <i class="fab fa-instagram fa-2x"> </i> </a>
+          <a href="https://www.facebook.com/pranit.chavan.52"><i class="fab fa-facebook fa-2x"></i> </a>
         </ul>
       </div>
     </div>
